--- a/HOTEL-SERVICE.yml
+++ b/HOTEL-SERVICE.yml
@@ -13,6 +13,12 @@ spring:
       ddl-auto: update
 
     show-sql: true
-
-
   
+eureka:
+ instance:
+   prefer-ip-address: true
+ client:
+   fetch-registry: true
+   register-with-eureka: true
+   service-url:
+     defailtZone: http://localhost:8761/eureka
